syntax = "proto3";

package sint64;

option go_package = "xgo/tests/pb/pbinvalid";

//import "google/protobuf/any.proto";
//import "google/protobuf/duration.proto";
//import "google/protobuf/timestamp.proto";
//
//import "tests/proto/module/external.proto";

import "proto/json.proto";

message SInt6403 {
  sint64 field03 = 3 [ (json.field) = { format: { sint32: { } } } ];
}
